test/cases/parser/Generic2.errors
Generic2.b:3:14: Syntax error (expected type variable name)
