test/cases/parser/Generic2.b
module Generic2
interface {
  function f<100>();
}